@@ -28,3 +28,7 @@ kotlin {
         }
     }
 }
+
+tasks.withType<Test>().configureEach {
+    jvmArgs("--enable-native-access=ALL-UNNAMED")
+}
